--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
 include README LICENCE RELEASE-NOTES AUTHORS
-include electrum.conf.sample
-include electrum.desktop
+include electrum-dash.conf.sample
+include electrum_dash.desktop
 include *.py
-include electrum
+include electrum-dash
 recursive-include lib *.py
 recursive-include gui *.py
 recursive-include plugins *.py
