--- a/electrum_dash.desktop
+++ b/electrum_dash.desktop
@@ -2,13 +2,13 @@
 # sudo desktop-file-install electrum.desktop
 
 [Desktop Entry]
-Comment=Lightweight Bitcoin Client
-Exec=electrum %u
-GenericName[en_US]=Electrum
-GenericName=Electrum
-Icon=electrum
-Name[en_US]=Electrum Bitcoin Wallet
-Name=Electrum Bitcoin Wallet
+Comment=Lightweight Dashpay Client
+Exec=electrum-dash %u
+GenericName[en_US]=Electrum-DASH
+GenericName=Electrum-DASH
+Icon=electrum_dash
+Name[en_US]=Electrum Dashpay Wallet
+Name=Electrum Dashpay Wallet
 Categories=Network;
 StartupNotify=false
 Terminal=false
