--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-slowaes>=0.1a1
-ecdsa>=0.9
-pbkdf2
-requests
-qrcode
-protobuf
-dnspython
-trezor>=0.6.3
-x11_hash>=1.4
+slowaes==0.1a1
+ecdsa==0.13
+pbkdf2==1.3
+requests==2.5.1
+qrcode==5.1
+protobuf==2.5.0
+dnspython==1.12.0
+x11_hash==1.4
+git+https://github.com/mazaclub/python-trezor@rev#egg=trezor
