--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ requests==2.5.1
 qrcode==5.1
 protobuf==2.5.0
 dnspython==1.12.0
-x11_hash==1.4
+git+https://github.com/mazaclub/x11_hash@1.4#egg=x11_hash
 git+https://github.com/mazaclub/python-trezor@rev#egg=trezor
