--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 language: python
 python:
     - "2.7"
+addons:
+  apt:
+    packages:
+    - libusb-1.0-0-dev
+    - libudev-dev
 install:
     - pip install tox
 script:
