--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ dnspython==1.12.0
 git+https://github.com/mazaclub/x11_hash@1.4#egg=x11_hash
 git+https://github.com/mazaclub/python-trezor@rev#egg=trezor
 git+https://github.com/keepkey/python-keepkey@v0.7.2#egg=keepkey
+git+https://github.com/LedgerHQ/btchip-python.git@v0.1.17#egg=btchip
