--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ matrix:
   include:
     - if: tag =~ .+
       os: osx
+      osx_image: xcode7.3
     - os: linux
       language: python
       python: 2.7
