--- a/contrib/travis/Dockerfile-wine
+++ b/contrib/travis/Dockerfile-wine
@@ -25,6 +25,9 @@ RUN xvfb-run -a wine PyQt.exe /S
 ENV WINEPREFIX /root/.wine
 ENV PYHOME c:/Python27
 
+RUN wget -O VCForPython27.msi https://download.microsoft.com/download/7/9/6/796EF2E4-801B-4FC4-AB28-B59FBF6D907B/VCForPython27.msi \
+    && xvfb-run -a -e /dev/stdout -a msiexec /q /i VCForPython27.msi && sleep 5
+
 RUN unzip -qq pywin32.exe ; echo
 RUN cp -r PLATLIB/* $WINEPREFIX/drive_c/Python27/Lib/site-packages/
 RUN mkdir -p $WINEPREFIX/drive_c/Python27/Scripts/
@@ -33,6 +36,7 @@ RUN wineboot --update && xvfb-run -a wine $PYHOME/python.exe -B \
      $WINEPREFIX/drive_c/Python27/Scripts/pywin32_postinstall.py -install
 
 COPY ./x11_hash/build/lib.win32-2.7/x11_hash.pyd $WINEPREFIX/drive_c/Python27/Lib/site-packages
+COPY ./python-trezor/dist/Python27 $WINEPREFIX/drive_c/Python27
 
 RUN rm -rf /tmp/.wine-* ; wineboot --update ; xvfb-run -a wine nsis.exe /S
 
@@ -47,10 +51,11 @@ RUN rm -rf /tmp/.wine-* ; wineboot --update ; wine python C:/Python27/Scripts/pi
     six==1.11.0 \
     qrcode==5.1 \
     pbkdf2==1.3 \
-    protobuf==3.4.0 \
+    protobuf==2.6.1 \
     jsonrpclib==0.1.7 \
     PySocks==1.6.7 \
-    win_inet_pton==1.0.1
+    win_inet_pton==1.0.1 \
+    mnemonic==0.18
 
 RUN rm -rf /tmp/.wine-* ; wineboot --update ; wine python C:/Python27/Scripts/pip.exe install --upgrade \
     setuptools
@@ -58,5 +63,4 @@ RUN rm -rf /tmp/.wine-* ; wineboot --update ; wine python C:/Python27/Scripts/pi
 RUN rm -rf /tmp/.wine-* ; wineboot --update ; wine python C:/Python27/Scripts/pip.exe install \
     cython==0.27.3 \
     btchip-python==0.1.23 \
-    keepkey==0.7.3 \
-    trezor==0.7.16
+    keepkey==0.7.3
