--- a/contrib/travis/Dockerfile-kivy
+++ b/contrib/travis/Dockerfile-kivy
@@ -1,5 +1,5 @@
 FROM ubuntu:16.04
-LABEL maintainer "Andriy Khavryuchenko <akhavr@khavr.com>"
+LABEL maintainer "AXErunners"
 
 RUN dpkg --add-architecture i386 \
     && apt-get update \
