--- a/contrib/travis/Dockerfile-linux
+++ b/contrib/travis/Dockerfile-linux
@@ -1,5 +1,5 @@
 FROM debian:stretch-slim
-LABEL maintainer "Andriy Khavryuchenko <akhavr@khavr.com>"
+LABEL maintainer "AXErunners"
 
 RUN apt-get update -y \
     && apt-get install -y python3-pip pyqt5-dev-tools \
