--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,12 +4,13 @@ include electrum-axe.conf.sample
 include electrum-axe.desktop
 include *.py
 include electrum-axe
+include contrib/requirements/requirements.txt
+include contrib/requirements/requirements-hw.txt
 recursive-include lib *.py
 recursive-include gui *.py
 recursive-include plugins *.py
 recursive-include packages *.py
 recursive-include packages cacert.pem
-include app.fil
 include icons.qrc
 recursive-include icons *
 recursive-include scripts *
