--- a/electrum-axe.conf.sample
+++ b/electrum-axe.conf.sample
@@ -1,4 +1,4 @@
-# Configuration file for the electrum-axe client
+# Configuration file for the electrum-AXE client
 # Settings defined here are shared across wallets
 #
 # copy this file to /etc/electrum-axe.conf if you want read-only settings
