--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: electrum-axe
 Section: utils
 Priority: optional
-Maintainer: AXErunners
+Maintainer: Andriy Khavryuchenko <akhavr@khavr.com>
 Build-Depends:
  debhelper (>= 9),
  dh-python,
@@ -19,18 +19,18 @@ Build-Depends:
  python3-socks (>= 1.6.5),
  python3-x11-hash (>=1.4),
 Standards-Version: 4.1.3
-Homepage: https://axerunners.com
+Homepage: http://electrum.axe.org/
 X-Python3-Version: >= 3.4
 
 Package: python3-electrum-axe
 Architecture: all
 Section: python
 Depends:
- trezor (>= 0.7.16.1),
- python3-trezor (>= 0.7.16.1),
+ trezor (>= 0.9.1),
+ python3-trezor (>= 0.9.1),
  keepkey (>= 4.0.2),
  python3-keepkey (>= 4.0.2),
- python3-btchip (>= 0.1.24),
+ python3-btchip (>= 0.1.26),
  ${misc:Depends},
  ${python3:Depends},
 Description: Easy to use AXE client - Python module
