--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: electrum-axe
 Section: utils
 Priority: optional
-Maintainer: Andriy Khavryuchenko <akhavr@khavr.com>
+Maintainer: AXErunners
 Build-Depends:
  debhelper (>= 9),
  dh-python,
@@ -19,7 +19,7 @@ Build-Depends:
  python3-socks (>= 1.6.5),
  python3-x11-hash (>=1.4),
 Standards-Version: 4.1.3
-Homepage: http://electrum.axe.org/
+Homepage: http://axerunners.github.io/
 X-Python3-Version: >= 3.4
 
 Package: python3-electrum-axe
@@ -72,5 +72,3 @@ Description: Easy to use AXE client
      offline. Broadcast them using a machine that does not have your keys.
    * Reachable: You can export your private keys into other AXE
      clients.
-   * Established: Electrum-AXE is open source and was first released in
-     November 2011.
