--- a/contrib/axe/travis/Dockerfile-kivy
+++ b/contrib/axe/travis/Dockerfile-kivy
@@ -1,14 +1,19 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 LABEL maintainer "AXErunners"
 
 RUN dpkg --add-architecture i386 \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
+        software-properties-common \
+    && add-apt-repository ppa:kivy-team/kivy-daily \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends \
+        software-properties-common \
         language-pack-en build-essential ccache git \
         libncurses5:i386 libstdc++6:i386 libgtk2.0-0:i386 \
         libpangox-1.0-0:i386 libpangoxft-1.0-0:i386 libidn11:i386 \
         openjdk-8-jdk unzip zlib1g-dev zlib1g:i386 \
-        python3-dev python3-kivy \
+        python-dev python3-dev python3-kivy \
         wget vim less autoconf automake libtool \
         ffmpeg \
         libsdl2-dev \
@@ -22,7 +27,7 @@ RUN dpkg --add-architecture i386 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py \
-    && pip3 install --upgrade setuptools cython==0.21.2 Pillow
+    && pip3 install --upgrade setuptools cython==0.28.2 Pillow
 
 RUN git config --global user.email "buildozer@example.com" \
     && git config --global user.name "Buildozer"
@@ -30,12 +35,16 @@ RUN git config --global user.email "buildozer@example.com" \
 RUN adduser --disabled-password --gecos '' buildozer && mkdir /home/buildozer/build
 
 RUN cd /opt \
+    && git config --global user.email "you@example.com" \
+    && git config --global user.name "Your Name" \
     && git clone https://github.com/kivy/python-for-android \
     && cd python-for-android \
     && git remote add agilewalker https://github.com/agilewalker/python-for-android \
+    && git remote add sombernight https://github.com/SomberNight/python-for-android \
     && git fetch --all \
     && git checkout 93759f36ba45c7bbe0456a4b3e6788622924cbac \
-    && git merge -m 'merge1' a2fb5ecbc09c4847adbcfd03c6b1ca62b3d09b8d \
+    && git cherry-pick a2fb5ecbc09c4847adbcfd03c6b1ca62b3d09b8d \
+    && git cherry-pick a0ef2007bc60ed642fbd8b61937995dbed0ddd24 \
     && cd /opt \
     && git clone https://github.com/kivy/buildozer \
     && cd buildozer \
