--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps=
 	pytest
 	coverage
 commands=
-	coverage run --source=electrum_dash -m py.test -v
+    coverage run --source=electrum_dash '--omit=electrum_dash/gui/*,electrum_dash/plugins/*,electrum_dash/scripts/*' -m py.test -v
 	coverage report
 extras=
 	fast
