--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,16 +3,17 @@ include README.rst
 include electrum-dash.conf.sample
 include electrum-dash.desktop
 include *.py
-include electrum-dash
+include run_electrum_dash
 include contrib/requirements/requirements.txt
 include contrib/requirements/requirements-hw.txt
-recursive-include lib *.py
-recursive-include gui *.py
-recursive-include plugins *.py
 recursive-include packages *.py
 recursive-include packages cacert.pem
 include icons.qrc
-recursive-include icons *
-recursive-include scripts *
-recursive-include debian *
+graft debian
+graft icons
 
+graft electrum_dash
+prune electrum_dash/tests
+
+global-exclude __pycache__
+global-exclude *.py[co]
