--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,8 @@ Section: python
 Depends:
  libsecp256k1-0,
  python3-pycryptodome,
+ safet (>= 0.1.3),
+ python3-safet (>= 0.1.3),
  trezor (>= 0.10.1),
  python3-trezor (>= 0.10.1),
  keepkey (>= 4.0.2),
