--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Depends:
 Description: Easy to use Dash client - Python module
  This package provides a lightweight Dash client which protects
  you from losing your Dashcoins in a backup mistake or computer
- failure. Also, Electrum-DASH does not require waiting time because it does
+ failure. Also, Dash-Electrum does not require waiting time because it does
  not download the Dash blockchain.
  .
  This package provides the "electrum_dash" Python 3 module which can be used
@@ -56,10 +56,10 @@ Recommends: python3-pyqt5
 Description: Easy to use Dash client
  This package provides a lightweight Dash client which protects
  you from losing your Dashcoins in a backup mistake or computer
- failure. Also, Electrum-DASH does not require waiting time because it does
+ failure. Also, Dash-Electrum does not require waiting time because it does
  not download the Dash blockchain.
  .
- Features of Electrum-DASH:
+ Features of Dash-Electrum:
  .
    * Instant on: Your client does not download the blockchain. It uses a
      network of specialized servers that index the blockchain.
@@ -76,5 +76,5 @@ Description: Easy to use Dash client
      offline. Broadcast them using a machine that does not have your keys.
    * Reachable: You can export your private keys into other Dash
      clients.
-   * Established: Electrum-DASH is open source and was first released in
+   * Established: Dash-Electrum is open source and was first released in
      November 2011.
