--- a/debian/control
+++ b/debian/control
@@ -52,7 +52,44 @@ Depends:
  ${misc:Depends},
  ${python3:Depends},
  python3-electrum-dash (= ${binary:Version}),
+Replaces: dash-electrum (<= ${binary:Version})
+Breaks: dash-electrum (<= ${binary:Version})
 Recommends: python3-pyqt5
+Description: Easy to use Dash client
+ This package provides a lightweight Dash client which protects
+ you from losing your Dashcoins in a backup mistake or computer
+ failure. Also, Dash-Electrum does not require waiting time because it does
+ not download the Dash blockchain.
+ .
+ Features of Dash-Electrum:
+ .
+   * Instant on: Your client does not download the blockchain. It uses a
+     network of specialized servers that index the blockchain.
+   * Forgiving: Your wallet can be recovered from a secret seed.
+   * Safe: Your seed and private keys are encrypted on your hard drive.
+     They are never sent to the servers.
+   * Low trust: Information received from the servers is verified using
+     SPV. Servers are authenticated using SSL.
+   * No downtimes: Your client is not tied to a particular server; it
+     will switch instantly if your server is down.
+   * Ubiquitous: You can use the same wallet on different computers, they
+     will synchronize automatically.
+   * Cold Storage: Sign transactions from a computer that is always
+     offline. Broadcast them using a machine that does not have your keys.
+   * Reachable: You can export your private keys into other Dash
+     clients.
+   * Established: Dash-Electrum is open source and was first released in
+     November 2011.
+
+Package: dash-electrum
+Architecture: all
+Depends:
+ ${misc:Depends},
+ ${python3:Depends},
+ python3-electrum-dash (= ${binary:Version}),
+Recommends: python3-pyqt5
+Replaces: electrum-dash (<= ${binary:Version})
+Breaks: electrum-dash (<= ${binary:Version})
 Description: Easy to use Dash client
  This package provides a lightweight Dash client which protects
  you from losing your Dashcoins in a backup mistake or computer
