--- a/contrib/requirements/requirements.txt
+++ b/contrib/requirements/requirements.txt
@@ -1,11 +1,11 @@
 pyaes>=0.1a1
 ecdsa>=0.9
-pbkdf2
 requests
 qrcode
 protobuf
 dnspython
 jsonrpclib-pelix
 PySocks>=1.6.6
+typing>=3.0.0
 pycryptodomex
 x11_hash
