--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,15 @@
 build/
 dist/
 *.egg/
-/electrum.py
 contrib/pyinstaller/
 Electrum.egg-info/
-gui/qt/icons_rc.py
+electrum_axe/gui/qt/icons_rc.py
 locale/
 .devlocaltmp/
 *_trial_temp
 packages
 env/
+env
 .tox/
 .buildozer/
 bin/
@@ -27,5 +27,3 @@ electrum_data/
 gui/kivy/theming/light-0.png
 gui/kivy/theming/light.atlas
 Electrum_AXE.egg-info/
-
-.DS_Store
