--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ override_dh_installchangelogs::
 	dh_installchangelogs -k RELEASE-NOTES
 
 override_dh_auto_build::
-	pyrcc5 icons.qrc -o gui/qt/icons_rc.py
+	pyrcc5 icons.qrc -o electrum_axe/gui/qt/icons_rc.py
 	dh_auto_build
 
 override_dh_auto_install::
