--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,12 +6,14 @@ include *.py
 include electrum-axe
 include contrib/requirements/requirements.txt
 include contrib/requirements/requirements-hw.txt
-recursive-include lib *.py
-recursive-include gui *.py
-recursive-include plugins *.py
 recursive-include packages *.py
 recursive-include packages cacert.pem
 include icons.qrc
-recursive-include icons *
-recursive-include scripts *
-recursive-include debian *
+graft debian
+graft icons
+
+graft electrum_axe
+prune electrum_axe/tests
+
+global-exclude __pycache__
+global-exclude *.py[co]
