--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps=
 	pytest
 	coverage
 commands=
-	coverage run --source=lib -m py.test -v
+    coverage run --source=electrum_axe '--omit=electrum_axe/gui/*,electrum_axe/plugins/*,electrum_axe/scripts/*,electrum_axe/tests/*' -m py.test -v
 	coverage report
 extras=
 	fast
