--- a/electrum-dash.desktop
+++ b/electrum-dash.desktop
@@ -2,13 +2,13 @@
 # sudo desktop-file-install electrum-dash.desktop
 
 [Desktop Entry]
-Comment=Lightweight Dashpay Client
+Comment=Dash-Electrum Wallet
 Exec=sh -c "PATH=\"\\$HOME/.local/bin:\\$PATH\" electrum-dash %u"
 GenericName[en_US]=Dash-Electrum
 GenericName=Dash-Electrum
 Icon=electrum-dash
-Name[en_US]=Electrum Dashpay Wallet
-Name=Electrum Dashpay Wallet
+Name[en_US]=Dash-Electrum Wallet
+Name=Dash-Electrum Wallet
 Categories=Network;
 StartupNotify=false
 Terminal=false
