--- a/electrum-dash.conf.sample
+++ b/electrum-dash.conf.sample
@@ -1,4 +1,4 @@
-# Configuration file for the Dash-Electrum client
+# Configuration file for the Dash Electrum client
 # Settings defined here are shared across wallets
 #
 # copy this file to /etc/electrum-dash.conf if you want read-only settings
