--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,7 @@ Build-Depends:
  python3-socks (>= 1.6.5),
  python3-x11-hash (>=1.4),
 Standards-Version: 4.1.3
-Homepage: http://axerunners.github.io/
+Homepage: http://axerunners.com/
 X-Python3-Version: >= 3.4
 
 Package: python3-electrum-axe
@@ -39,8 +39,8 @@ Depends:
  ${python3:Depends},
 Description: Easy to use AXE client - Python module
  This package provides a lightweight AXE client which protects
- you from losing your AXE coins in a backup mistake or computer
- failure. Also, Electrum-AXE does not require waiting time because it does
+ you from losing your AXEcoins in a backup mistake or computer
+ failure. Also, AXE Electrum does not require waiting time because it does
  not download the AXE blockchain.
  .
  This package provides the "electrum_axe" Python 3 module which can be used
@@ -52,14 +52,16 @@ Depends:
  ${misc:Depends},
  ${python3:Depends},
  python3-electrum-axe (= ${binary:Version}),
+Replaces: axe-electrum (<= ${binary:Version})
+Breaks: axe-electrum (<= ${binary:Version})
 Recommends: python3-pyqt5
 Description: Easy to use AXE client
  This package provides a lightweight AXE client which protects
- you from losing your AXE coins in a backup mistake or computer
- failure. Also, Electrum-AXE does not require waiting time because it does
+ you from losing your AXEcoins in a backup mistake or computer
+ failure. Also, AXE Electrum does not require waiting time because it does
  not download the AXE blockchain.
  .
- Features of Electrum-AXE:
+ Features of AXE Electrum:
  .
    * Instant on: Your client does not download the blockchain. It uses a
      network of specialized servers that index the blockchain.
@@ -76,3 +78,40 @@ Description: Easy to use AXE client
      offline. Broadcast them using a machine that does not have your keys.
    * Reachable: You can export your private keys into other AXE
      clients.
+   * Established: AXE Electrum is open source and was first released in
+     November 2011.
+
+Package: axe-electrum
+Architecture: all
+Depends:
+ ${misc:Depends},
+ ${python3:Depends},
+ python3-electrum-axe (= ${binary:Version}),
+Recommends: python3-pyqt5
+Replaces: electrum-axe (<= ${binary:Version})
+Breaks: electrum-axe (<= ${binary:Version})
+Description: Easy to use AXE client
+ This package provides a lightweight AXE client which protects
+ you from losing your AXEcoins in a backup mistake or computer
+ failure. Also, AXE Electrum does not require waiting time because it does
+ not download the AXE blockchain.
+ .
+ Features of AXE Electrum:
+ .
+   * Instant on: Your client does not download the blockchain. It uses a
+     network of specialized servers that index the blockchain.
+   * Forgiving: Your wallet can be recovered from a secret seed.
+   * Safe: Your seed and private keys are encrypted on your hard drive.
+     They are never sent to the servers.
+   * Low trust: Information received from the servers is verified using
+     SPV. Servers are authenticated using SSL.
+   * No downtimes: Your client is not tied to a particular server; it
+     will switch instantly if your server is down.
+   * Ubiquitous: You can use the same wallet on different computers, they
+     will synchronize automatically.
+   * Cold Storage: Sign transactions from a computer that is always
+     offline. Broadcast them using a machine that does not have your keys.
+   * Reachable: You can export your private keys into other AXE
+     clients.
+   * Established: AXE Electrum is open source and was first released in
+     November 2011.
