--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends:
  python3-jsonrpclib-pelix (>= 0.3.1),
  python3-socks (>= 1.6.5),
  python3-x11-hash (>=1.4),
+ python3-bls (>=0.1.4),
 Standards-Version: 4.1.3
 Homepage: http://electrum.dash.org/
 X-Python3-Version: >= 3.4
