fix and simplify apk build

--- a/contrib/dash/travis/Dockerfile-kivy
+++ b/contrib/dash/travis/Dockerfile-kivy
@@ -1,20 +1,47 @@
 FROM ubuntu:18.04
 LABEL maintainer "Andriy Khavryuchenko <akhavr@khavr.com>"
 
+ENV LANG="en_US.UTF-8" \
+    LANGUAGE="en_US.UTF-8" \
+    LC_ALL="en_US.UTF-8"
+
+ENV OPTDIR="/opt"
+ENV ANDROID_NDK_HOME="${OPTDIR}/android-ndk"
+ENV ANDROID_NDK_VERSION="17c"
+ENV ANDROID_NDK_HOME_V="${ANDROID_NDK_HOME}-r${ANDROID_NDK_VERSION}"
+ENV ANDROID_NDK_ARCHIVE="android-ndk-r${ANDROID_NDK_VERSION}-linux-x86_64.zip"
+ENV ANDROID_NDK_DL_URL="https://dl.google.com/android/repository/${ANDROID_NDK_ARCHIVE}"
+
+ENV ANDROID_SDK_HOME="${OPTDIR}/android-sdk"
+ENV ANDROID_SDK_TOOLS_VERSION="4333796"
+ENV ANDROID_SDK_BUILD_TOOLS_VERSION="28.0.3"
+ENV ANDROID_SDK_TOOLS_ARCHIVE="sdk-tools-linux-${ANDROID_SDK_TOOLS_VERSION}.zip"
+ENV ANDROID_SDK_TOOLS_DL_URL="https://dl.google.com/android/repository/${ANDROID_SDK_TOOLS_ARCHIVE}"
+
+ENV USE_SDK_WRAPPER=1
+ENV GRADLE_OPTS="-Xmx1536M -Dorg.gradle.jvmargs='-Xmx1536M'"
+ENV USER="buildozer"
+ENV HOMEDIR="/home/${USER}"
+ENV WORKDIR="${HOMEDIR}/build" \
+    PATH="${HOMEDIR}/.local/bin:${PATH}"
+
+
 RUN dpkg --add-architecture i386 \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
         software-properties-common \
-    && add-apt-repository ppa:kivy-team/kivy-daily \
+    && add-apt-repository ppa:kivy-team/kivy \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
         software-properties-common \
         language-pack-en build-essential ccache git \
         libncurses5:i386 libstdc++6:i386 libgtk2.0-0:i386 \
         libpangox-1.0-0:i386 libpangoxft-1.0-0:i386 libidn11:i386 \
-        openjdk-8-jdk unzip zlib1g-dev zlib1g:i386 \
-        python-dev python3-dev python3-kivy \
-        wget vim less autoconf automake libtool \
+        openjdk-8-jdk unzip zlib1g-dev zlib1g:i386 zip sudo \
+        python3-dev python3-kivy lbzip2 \
+        wget curl ca-certificates patch vim less autoconf automake libtool \
+        libffi-dev cmake gettext libltdl-dev pkg-config \
+        locales \
         ffmpeg \
         libsdl2-dev \
         libsdl2-image-dev \
@@ -24,105 +51,65 @@ RUN dpkg --add-architecture i386 \
         libswscale-dev \
         libavformat-dev \
         libavcodec-dev \
+    && locale-gen en_US.UTF-8 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py \
-    && pip3 install --upgrade setuptools cython==0.28.2 Pillow
+    && pip3 install --upgrade setuptools cython==0.28.6 image
 
 RUN git config --global user.email "buildozer@example.com" \
     && git config --global user.name "Buildozer"
 
-RUN adduser --disabled-password --gecos '' buildozer && mkdir /home/buildozer/build
+RUN adduser --disabled-password --gecos '' ${USER} \
+    && mkdir /home/buildozer/build \
+    && chown ${USER}.${USER} ${WORKDIR}
+RUN usermod -append --groups sudo ${USER}
+RUN echo "%sudo ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 
-RUN cd /opt \
-    && git config --global user.email "you@example.com" \
-    && git config --global user.name "Your Name" \
+RUN cd ${OPTDIR} \
     && git clone https://github.com/kivy/python-for-android \
     && cd python-for-android \
-    && git remote add agilewalker https://github.com/agilewalker/python-for-android \
-    && git remote add sombernight https://github.com/SomberNight/python-for-android \
+    && git remote add sombernight \
+        https://github.com/SomberNight/python-for-android \
     && git fetch --all \
-    && git checkout 93759f36ba45c7bbe0456a4b3e6788622924cbac \
-    && git cherry-pick a2fb5ecbc09c4847adbcfd03c6b1ca62b3d09b8d \
-    && git cherry-pick a0ef2007bc60ed642fbd8b61937995dbed0ddd24 \
-    && cd /opt \
+    && git checkout dec1badc3bd134a9a1c69275339423a95d63413e \
+    && git cherry-pick 86eeec7c19679a5886d5e095ce0a43f1da138f87 \
+    && python3 -m pip install -e . \
+    && cd ${OPTDIR} \
     && git clone https://github.com/kivy/buildozer \
     && cd buildozer \
-    && python3 setup.py install \
-    && chown -R buildozer.buildozer /opt
+    && git checkout 6142acfa40cf9a225644470e5410333c35a3bc4a \
+    && python3 -m pip install -e .
 
-RUN cd /opt \
-    && wget http://archive.apache.org/dist/ant/binaries/apache-ant-1.9.11-bin.tar.gz \
-    && tar xzf apache-ant-1.9.11-bin.tar.gz \
-    && rm apache-ant-1.9.11-bin.tar.gz \
-    && chown -R buildozer.buildozer /opt
+RUN cd ${OPTDIR} \
+    && curl -# "${ANDROID_SDK_TOOLS_DL_URL}" \
+        --output "${ANDROID_SDK_TOOLS_ARCHIVE}" \
+    && mkdir --parents "${ANDROID_SDK_HOME}" \
+    && unzip -q "${ANDROID_SDK_TOOLS_ARCHIVE}" -d "${ANDROID_SDK_HOME}" \
+    && rm -rf "${ANDROID_SDK_TOOLS_ARCHIVE}" \
+    && mkdir --parents "${ANDROID_SDK_HOME}/.android/" \
+    && echo '### User Sources for Android SDK Manager' \
+        > "${ANDROID_SDK_HOME}/.android/repositories.cfg" \
+    && yes | "${ANDROID_SDK_HOME}/tools/bin/sdkmanager" \
+        "build-tools;${ANDROID_SDK_BUILD_TOOLS_VERSION}" > /dev/null \
+    && "${ANDROID_SDK_HOME}/tools/bin/sdkmanager" \
+        "platforms;android-24" > /dev/null \
+    && "${ANDROID_SDK_HOME}/tools/bin/sdkmanager" \
+        "platforms;android-28" > /dev/null \
+    && "${ANDROID_SDK_HOME}/tools/bin/sdkmanager" \
+        "build-tools;${ANDROID_SDK_BUILD_TOOLS_VERSION}" > /dev/null \
+    && "${ANDROID_SDK_HOME}/tools/bin/sdkmanager" \
+        "extras;android;m2repository" > /dev/null && \
+    chmod +x "${ANDROID_SDK_HOME}/tools/bin/avdmanager"
 
-RUN cd /opt \
-    && wget https://www.crystax.net/download/crystax-ndk-10.3.2-linux-x86_64.tar.xz \
-    && tar xJf crystax-ndk-10.3.2-linux-x86_64.tar.xz \
-    && rm crystax-ndk-10.3.2-linux-x86_64.tar.xz \
-    && rm -rf \
-        crystax-ndk-10.3.2/platforms/android-*/arch-mips* \
-        crystax-ndk-10.3.2/platforms/android-*/arch-x86* \
-        crystax-ndk-10.3.2/sources/boost/1.59.0/libs/mips* \
-        crystax-ndk-10.3.2/sources/crystax/src/math/mips* \
-        crystax-ndk-10.3.2/sources/crystax/src/include/crystax/mips* \
-        crystax-ndk-10.3.2/sources/crystax/libs/mips* \
-        crystax-ndk-10.3.2/sources/crystax/include/crystax/mips* \
-        crystax-ndk-10.3.2/sources/libjpeg-turbo/1.4.2/libs/mips* \
-        crystax-ndk-10.3.2/sources/python/2.7/libs/mips* \
-        crystax-ndk-10.3.2/sources/python/3.5/libs/mips* \
-        crystax-ndk-10.3.2/sources/icu/56.1/libs/mips* \
-        crystax-ndk-10.3.2/sources/libjpeg/9a/libs/mips* \
-        crystax-ndk-10.3.2/sources/objc/gnustep-libobjc2/libs/mips* \
-        crystax-ndk-10.3.2/sources/objc/cocotron/0.1.0/frameworks/mips* \
-        crystax-ndk-10.3.2/sources/sqlite/3/libs/mips* \
-        crystax-ndk-10.3.2/sources/android/compiler-rt/libs/mips* \
-        crystax-ndk-10.3.2/sources/android/gccunwind/libs/mips* \
-        crystax-ndk-10.3.2/sources/libtiff/4.0.6/libs/mips* \
-        crystax-ndk-10.3.2/sources/libpng/1.6.19/libs/mips* \
-        crystax-ndk-10.3.2/sources/boost/1.59.0/libs/x86* \
-        crystax-ndk-10.3.2/sources/crystax/src/math/x86* \
-        crystax-ndk-10.3.2/sources/crystax/src/include/crystax/x86* \
-        crystax-ndk-10.3.2/sources/crystax/libs/x86* \
-        crystax-ndk-10.3.2/sources/crystax/include/crystax/x86* \
-        crystax-ndk-10.3.2/sources/libjpeg-turbo/1.4.2/libs/x86* \
-        crystax-ndk-10.3.2/sources/python/2.7/libs/x86* \
-        crystax-ndk-10.3.2/sources/python/3.5/libs/x86* \
-        crystax-ndk-10.3.2/sources/icu/56.1/libs/x86* \
-        crystax-ndk-10.3.2/sources/libjpeg/9a/libs/x86* \
-        crystax-ndk-10.3.2/sources/objc/gnustep-libobjc2/libs/x86* \
-        crystax-ndk-10.3.2/sources/objc/cocotron/0.1.0/frameworks/x86* \
-        crystax-ndk-10.3.2/sources/sqlite/3/libs/x86* \
-        crystax-ndk-10.3.2/sources/android/compiler-rt/libs/x86* \
-        crystax-ndk-10.3.2/sources/android/gccunwind/libs/x86* \
-        crystax-ndk-10.3.2/sources/libtiff/4.0.6/libs/x86* \
-        crystax-ndk-10.3.2/sources/libpng/1.6.19/libs/x86* \
-        crystax-ndk-10.3.2/sources/cxx-stl/llvm-libc++/3.6/libs/x86* \
-        crystax-ndk-10.3.2/sources/cxx-stl/llvm-libc++/3.6/libs/mips* \
-        crystax-ndk-10.3.2/sources/cxx-stl/llvm-libc++/3.7/libs/x86* \
-        crystax-ndk-10.3.2/sources/cxx-stl/llvm-libc++/3.7/libs/mips* \
-        crystax-ndk-10.3.2/sources/cxx-stl/gnu-libstdc++/4.9/libs/x86* \
-        crystax-ndk-10.3.2/sources/cxx-stl/gnu-libstdc++/4.9/libs/mips* \
-        crystax-ndk-10.3.2/sources/cxx-stl/gnu-libstdc++/5/libs/x86* \
-        crystax-ndk-10.3.2/sources/cxx-stl/gnu-libstdc++/5/libs/mips* \
-    && chown -R buildozer.buildozer /opt/crystax-ndk-10.3.2
+RUN cd ${OPTDIR} \
+    && curl -# "${ANDROID_NDK_DL_URL}" \
+        --output "${ANDROID_NDK_ARCHIVE}" \
+    && mkdir --parents "${ANDROID_NDK_HOME_V}" \
+    && unzip -q "${ANDROID_NDK_ARCHIVE}" -d "${OPTDIR}" \
+    && chown -R ${USER}.${USER} ${OPTDIR} \
+    && ln -sfn "${ANDROID_NDK_HOME_V}" "${ANDROID_NDK_HOME}" \
+    && rm -rf "${ANDROID_NDK_ARCHIVE}"
 
-RUN cd /opt \
-    && wget http://dl.google.com/android/android-sdk_r24-linux.tgz \
-    && tar xzf android-sdk_r24-linux.tgz \
-    && rm android-sdk_r24-linux.tgz \
-    && (while sleep 3; do echo "y"; done) \
-        | android-sdk-linux/tools/android update sdk -u -a -t \
-            'tools, platform-tools-preview, build-tools-23.0.1' \
-    && (while sleep 3; do echo "y"; done) \
-        | android-sdk-linux/tools/android update sdk -u -a -t \
-            'tools, platform-tools, build-tools-27.0.3' \
-    && (while sleep 3; do echo "y"; done) \
-        | android-sdk-linux/tools/android update sdk -u -a -t \
-            'android-19,extra-android-m2repository' \
-    && chown -R buildozer.buildozer /opt/android-sdk-linux
-
-USER buildozer
-
-WORKDIR /home/buildozer/build
+USER ${USER}
+WORKDIR ${WORKDIR}
