--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,8 @@ Maintainer: Andriy Khavryuchenko <akhavr@khavr.com>
 Build-Depends:
  debhelper (>= 9),
  dh-python,
- python3-all-dev (>= 3.6),
+ python3 (>= 3.6) | python3.6,
  python3-setuptools,
- pyqt5-dev-tools,
  python3-pyaes (>= 1.6.1),
  python3-ecdsa (>= 0.10),
  python3-pbkdf2 (>= 1.3),
@@ -21,7 +20,7 @@ Build-Depends:
  python3-bls (>=0.1.4),
 Standards-Version: 4.1.3
 Homepage: http://electrum.dash.org/
-X-Python3-Version: >= 3.4
+X-Python3-Version: >= 3.6
 
 Package: python3-electrum-dash
 Architecture: all
