--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+export PYBUILD_INTERPRETERS=python{version}
+export PYBUILD_VERSIONS=3.6,3.7
 export PYBUILD_NAME=electrum-dash
 
 %:
@@ -7,10 +9,6 @@ export PYBUILD_NAME=electrum-dash
 
 override_dh_installchangelogs::
 	dh_installchangelogs -k RELEASE-NOTES
-
-override_dh_auto_build::
-	pyrcc5 icons.qrc -o electrum_dash/gui/qt/icons_rc.py
-	dh_auto_build
 
 override_dh_auto_install::
 	dh_auto_install
