--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Andriy Khavryuchenko <akhavr@khavr.com>
 Build-Depends:
  debhelper (>= 9),
  dh-python,
- python3 (>= 3.6) | python3.6,
+ python3-all (>= 3.5.36~),
  python3-setuptools,
  python3-pyaes (>= 1.6.1),
  python3-ecdsa (>= 0.10),
@@ -16,8 +16,13 @@ Build-Depends:
  python3-dnspython (>= 1.11.1),
  python3-jsonrpclib-pelix (>= 0.3.1),
  python3-socks (>= 1.6.5),
- python3-x11-hash (>=1.4),
- python3-bls (>=0.1.4),
+ python3-aiorpcx (<< 0.11),
+ python3-aiohttp (>= 3.3.0),
+ python3-aiohttp-socks,
+ python3-certifi,
+ python3-x11-hash (>= 1.4),
+ python3-bls (>= 0.1.4),
+ python3-pyqt5,
 Standards-Version: 4.1.3
 Homepage: http://electrum.dash.org/
 X-Python3-Version: >= 3.6
@@ -35,8 +40,21 @@ Depends:
  keepkey (>= 4.0.2),
  python3-keepkey (>= 4.0.2),
  python3-btchip (>= 0.1.28),
- ${misc:Depends},
- ${python3:Depends},
+ hideez (>= 0.2.1),
+ python3-hideez (>= 0.2.1),
+ python3-aiohttp (>= 3.3.0),
+ python3-aiohttp-socks,
+ python3-aiorpcx (<< 0.11),
+ python3-bls,
+ python3-certifi,
+ python3-dnspython (>= 1.11.1),
+ python3-ecdsa (>= 0.10),
+ python3-jsonrpclib-pelix (>= 0.3.1),
+ python3-protobuf (>= 3.0.0),
+ python3-pyaes (>= 1.6.1),
+ python3-qrcode (>= 5.3),
+ python3-x11-hash (>= 1.4),
+ python3:any (>= 3.5.36~),
 Description: Easy to use Dash client - Python module
  This package provides a lightweight Dash client which protects
  you from losing your Dashcoins in a backup mistake or computer
@@ -50,7 +68,7 @@ Package: electrum-dash
 Architecture: all
 Depends:
  ${misc:Depends},
- ${python3:Depends},
+ python3,
  python3-electrum-dash (= ${binary:Version}),
 Replaces: dash-electrum (<= ${binary:Version})
 Breaks: dash-electrum (<= ${binary:Version})
@@ -85,7 +103,7 @@ Package: dash-electrum
 Architecture: all
 Depends:
  ${misc:Depends},
- ${python3:Depends},
+ python3,
  python3-electrum-dash (= ${binary:Version}),
 Recommends: python3-pyqt5
 Replaces: electrum-dash (<= ${binary:Version})
