--- a/contrib/axe/travis/Dockerfile-linux
+++ b/contrib/axe/travis/Dockerfile-linux
@@ -1,7 +1,7 @@
-FROM debian:stretch-slim
+FROM ubuntu:18.04
 LABEL maintainer "AXErunners"
 
 RUN apt-get update -y \
-    && apt-get install -y python3-pip pyqt5-dev-tools \
+    && apt-get install -y python3-pip \
         gettext python3-pycurl python3-requests git \
     && rm -rf /var/lib/apt/lists/*
