--- a/contrib/requirements/requirements-hw.txt
+++ b/contrib/requirements/requirements-hw.txt
@@ -1,7 +1,8 @@
 Cython>=0.27
-trezor[hidapi]>=0.9.0
+hideez>=0.2.1
+trezor[hidapi]>=0.11.0
 safet[hidapi]>=0.1.0
 keepkey
-btchip-python
+btchip-python>=0.1.26
 websocket-client
 hidapi
