--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,8 @@ Maintainer: AXErunners
 Build-Depends:
  debhelper (>= 9),
  dh-python,
- python3-all-dev,
+ python3-all (>= 3.5.36~),
  python3-setuptools,
- pyqt5-dev-tools,
  python3-pyaes (>= 1.6.1),
  python3-ecdsa (>= 0.10),
  python3-pbkdf2 (>= 1.3),
@@ -17,11 +16,16 @@ Build-Depends:
  python3-dnspython (>= 1.11.1),
  python3-jsonrpclib-pelix (>= 0.3.1),
  python3-socks (>= 1.6.5),
- python3-x11-hash (>=1.4),
- python3-bls (>=0.1.4),
+ python3-aiorpcx (<< 0.11),
+ python3-aiohttp (>= 3.3.0),
+ python3-aiohttp-socks,
+ python3-certifi,
+ python3-x11-hash (>= 1.4),
+ python3-bls (>= 0.1.4),
+ python3-pyqt5,
 Standards-Version: 4.1.3
-Homepage: http://axerunners.com/
-X-Python3-Version: >= 3.4
+Homepage: http://electrum.axe.org/
+X-Python3-Version: >= 3.6
 
 Package: python3-electrum-axe
 Architecture: all
@@ -29,40 +33,53 @@ Section: python
 Depends:
  libsecp256k1-0,
  python3-pycryptodome,
- safet (>= 0.1.3),
- python3-safet (>= 0.1.3),
+ safet (>= 0.1.4),
+ python3-safet (>= 0.1.4),
  trezor (>= 0.10.1),
  python3-trezor (>= 0.10.1),
  keepkey (>= 4.0.2),
  python3-keepkey (>= 4.0.2),
- python3-btchip (>= 0.1.27),
- ${misc:Depends},
- ${python3:Depends},
-Description: Easy to use AXE client - Python module
- This package provides a lightweight AXE client which protects
- you from losing your AXEcoins in a backup mistake or computer
- failure. Also, AXE Electrum does not require waiting time because it does
- not download the AXE blockchain.
+ python3-btchip (>= 0.1.28),
+ hideez (>= 0.2.1),
+ python3-hideez (>= 0.2.1),
+ python3-aiohttp (>= 3.3.0),
+ python3-aiohttp-socks,
+ python3-aiorpcx (<< 0.11),
+ python3-bls,
+ python3-certifi,
+ python3-dnspython (>= 1.11.1),
+ python3-ecdsa (>= 0.10),
+ python3-jsonrpclib-pelix (>= 0.3.1),
+ python3-protobuf (>= 3.0.0),
+ python3-pyaes (>= 1.6.1),
+ python3-qrcode (>= 5.3),
+ python3-x11-hash (>= 1.4),
+ python3:any (>= 3.5.36~),
+Description: Easy to use Axe client - Python module
+ This package provides a lightweight Axe client which protects
+ you from losing your Axecoins in a backup mistake or computer
+ failure. Also, Axe Electrum does not require waiting time because it does
+ not download the Axe blockchain.
  .
  This package provides the "electrum_axe" Python 3 module which can be used
- to access a AXE wallet from Python programs.
+ to access a Axe wallet from Python programs.
 
 Package: electrum-axe
 Architecture: all
 Depends:
  ${misc:Depends},
- ${python3:Depends},
+ python3,
  python3-electrum-axe (= ${binary:Version}),
 Replaces: axe-electrum (<= ${binary:Version})
 Breaks: axe-electrum (<= ${binary:Version})
 Recommends: python3-pyqt5
-Description: Easy to use AXE client
- This package provides a lightweight AXE client which protects
- you from losing your AXEcoins in a backup mistake or computer
- failure. Also, AXE Electrum does not require waiting time because it does
- not download the AXE blockchain.
+Description: Easy to use Axe client
+ This package provides a lightweight Axe client which protects
+ you from losing your Axecoins in a backup mistake or computer
+ failure. Also, Axe Electrum does not require waiting time because it does
+ not download the Axe blockchain.
  .
- Features of AXE Electrum:
+ Features of Axe Electrum:
  .
    * Instant on: Your client does not download the blockchain. It uses a
      network of specialized servers that index the blockchain.
@@ -77,27 +94,27 @@ Description: Easy to use AXE client
      will synchronize automatically.
    * Cold Storage: Sign transactions from a computer that is always
      offline. Broadcast them using a machine that does not have your keys.
-   * Reachable: You can export your private keys into other AXE
+   * Reachable: You can export your private keys into other Axe
      clients.
-   * Established: AXE Electrum is open source and was first released in
+   * Established: Axe Electrum is open source and was first released in
      November 2011.
 
 Package: axe-electrum
 Architecture: all
 Depends:
  ${misc:Depends},
- ${python3:Depends},
+ python3,
  python3-electrum-axe (= ${binary:Version}),
 Recommends: python3-pyqt5
 Replaces: electrum-axe (<= ${binary:Version})
 Breaks: electrum-axe (<= ${binary:Version})
-Description: Easy to use AXE client
- This package provides a lightweight AXE client which protects
- you from losing your AXEcoins in a backup mistake or computer
- failure. Also, AXE Electrum does not require waiting time because it does
- not download the AXE blockchain.
+Description: Easy to use Axe client
+ This package provides a lightweight Axe client which protects
+ you from losing your Axecoins in a backup mistake or computer
+ failure. Also, Axe Electrum does not require waiting time because it does
+ not download the Axe blockchain.
  .
- Features of AXE Electrum:
+ Features of Axe Electrum:
  .
    * Instant on: Your client does not download the blockchain. It uses a
      network of specialized servers that index the blockchain.
@@ -112,7 +129,7 @@ Description: Easy to use AXE client
      will synchronize automatically.
    * Cold Storage: Sign transactions from a computer that is always
      offline. Broadcast them using a machine that does not have your keys.
-   * Reachable: You can export your private keys into other AXE
+   * Reachable: You can export your private keys into other Axe
      clients.
-   * Established: AXE Electrum is open source and was first released in
+   * Established: Axe Electrum is open source and was first released in
      November 2011.
